realize the model of book and register it into database
